<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/tv_Employee_Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/employee_details"
        app:layout_constraintBottom_toTopOf="@+id/et_employee_id"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_employee_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_employee_id"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/et_employee_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_employee_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_employee_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_employee_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_employee_salary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_employee_salary"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/bv_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bv_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>